# image_processor

./: CMakeLists.txt  image_processor.cpp
include/data/: image.h  pixel.h
include/filters/: blur.h  crop.h  edge_detection.h  filter.h  grayscale.h  my_filter.h  negative.h  sharpening.h
include/io/: binary_reader.h  binary_writer.h  bmp.h  image_format.h
src/data/: image.cpp  pixel.cpp
src/filters/: blur.cpp  crop.cpp  edge_detection.cpp  grayscale.cpp  my_filter.cpp  negative.cpp  sharpening.cpp
src/io/: binary_reader.cpp  binary_writer.cpp  bmp.cpp
